// Copyright 2023-2024 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buf.protoyaml.test.v1;

import "google/protobuf/any.proto";
import "google/protobuf/descriptor.proto";

message ConstValues {
  string name = 1; // file name, relative to root of source tree
  string package = 2; // e.g. "foo", "foo.bar", etc.
  repeated string dependency = 3;
  google.protobuf.FileOptions options = 8;
  map<string, google.protobuf.Any> values = 4;
}
