// Copyright 2023-2024 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package buf.protoyaml.test.v1;

message Proto2Test {
  repeated Proto2TestValue values = 1;
  extensions 100 to max;
}

message Proto2TestValue {
  oneof oneof_value {
    string oneof_string_value = 1;
    int32 oneof_int32_value = 2;
  }
}

extend Proto2Test {
  optional string p2t_string_ext = 100;
  repeated string p2t_repeated_string_ext = 101;
}
