// Copyright 2023-2024 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buf.protoyaml.test.v1;

import "buf/validate/validate.proto";
import "google/protobuf/any.proto";

message ValidateTest {
  repeated ValidateTestCase cases = 1;
}

message ValidateTestCase {
  google.protobuf.Any dynamic = 1;
  float float_gt_lt = 2 [(buf.validate.field).float = {
    gt: 0
    lt: 10
  }];
  map<string, string> string_map = 3 [(buf.validate.field).map = {
    keys: {
      string: {pattern: "^[a-z]+$"}
    }
    values: {
      string: {pattern: "^[A-Z]+$"}
    }
  }];
}
